crates/test-files/fixtures/compile_errors/return_call_to_fn_with_param_type_mismatch.fe
contract Foo {
    pub fn foo(_ val: bool) -> u256 {
        return 42
    }

    pub fn bar() -> u256 {
        return foo(100)
    }
}
